2008-07-06  Ludovic Courtès  <ludo@gnu.org>

	* standalone/test-asmobs, standalone/test-bad-identifiers,
	standalone/test-require-extension, standalone/test-system-cmds:
	Invoke `guile' with `-q'.

2008-06-02  Ludovic Courtès  <ludo@gnu.org>

	* standalone/test-conversion.c: Support systems whose
	<inttypes.h> doesn't define `PRIiMAX'.  Reported by Peter
	O'Gorman <pogma@thewrittenword.com>.

2008-05-31  Ludovic Courtès  <ludo@gnu.org>

	* standalone/test-gh.c (string_equal): Use `scm_c_string_length ()'
	instead of `scm_i_string_length ()'.
	
2008-04-28  Ludovic Courtès  <ludo@gnu.org>

	* tests/srfi-1.test (partition)[with improper list]: New test.
	(partition!)[with improper list]: New test.

2008-04-26  Ludovic Courtès  <ludo@gnu.org>

	* standalone/Makefile.am (TESTS): Only add
	`test-with-guile-module' when `BUILD_PTHREAD_SUPPORT' is true.
	Reported by Alain Guibert <alguibert+bts@free.fr>.

2008-04-26  Ludovic Courtès  <ludo@gnu.org>

	* tests/srfi-35.test (cond-expand): New test.

2008-04-26  Ludovic Courtès  <ludo@gnu.org>

	* Makefile.am (SCM_TESTS): Add `tests/srfi-88.test'.
	* tests/srfi-88.test: New file.

2008-04-15  Ludovic Courtès  <ludo@gnu.org>

	* tests/reader.test (read-options)[prefix non-keywords, postfix
	keywords, `:' is not a postfix keyword (per SRFI-88)]: New tests.

2008-04-13  Ludovic Courtès  <ludo@gnu.org>

	* tests/goops.test (defining classes)[interaction with
	`struct-ref', interaction with `struct-set!']: New test.  Checks
	the interaction of `struct-ref' with "light structs", fixed on
	2008-04-10 (commit 4650d115020924e8da5547d4c346cbe5cd01029e).

2008-04-06  Ludovic Courtès  <ludo@gnu.org>

	* standalone/test-asmobs-lib.c, standalone/test-conversion.c,
	standalone/test-gh.c, standalone/test-list.c,
	standalone/test-num2integral.c, standalone/test-round.c: Make
	sure "config.h" is included first; use angle brackets for
	<config.h> and <libguile.h>.

2008-03-13  Ludovic Courtès  <ludo@gnu.org>
